remove depreciated errors